<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/LinearLayout_padding"
        tools:context=".MainActivity">

        <TextView
            style="@style/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint_1"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/born_place"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Shanghai"
                style="@style/radioButton"
                android:text="@string/radioButton_1" />

            <RadioButton
                android:id="@+id/Wuhan"
                style="@style/radioButton"
                android:text="@string/radioButton_2" />

            <RadioButton
                android:id="@+id/Dalian"
                style="@style/radioButton"
                android:text="@string/radioButton_3" />
        </RadioGroup>

        <TextView
            style="@style/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <CheckBox
            android:id="@+id/singapore"
            style="@style/checkBox"
            android:text="@string/checkBox_1" />

        <CheckBox
            android:id="@+id/chengdu"
            style="@style/checkBox"
            android:layout_marginTop="10dp"
            android:text="@string/checkBox_2" />

        <CheckBox
            android:id="@+id/xiamen"
            style="@style/checkBox"
            android:layout_marginTop="10dp"
            android:text="@string/checkBox_3" />

        <TextView
            style="@style/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/favorite_singer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/taylor_swift"
                style="@style/radioButton"
                android:text="@string/radioButton_4" />

            <RadioButton
                android:id="@+id/justin_timberlake"
                style="@style/radioButton"
                android:text="@string/radioButton_5" />
        </RadioGroup>

        <TextView
            style="@style/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint_2"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submit"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>

